--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             
             <button type="submit">Submit</button>
             <button type="button" onclick="location.href='newUser.html'">Sign Up</button>
-            <button type="button" onclick="location.href='User.html'">Update</button>
+            <button type="button" onclick="location.href='User.php '">Update</button>
             </section>
         </form>
     </body>
