--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="index.html" class="nav-link active">Home</a>
         <a href="catalog.php" class="nav-link">Catalog</a>
         <a href="suppliers.php" class="nav-link">Suppliers</a>
+        <a href="users.php" class="nav-link">Users</a>
     </nav>
 
 </header>
