--- a/Admin.html
+++ b/Admin.html
@@ -24,7 +24,7 @@
 
             <h1>Welcome Admin!</h1>
             <button type="button" onclick="location.href='index.html'">Log Out</button>
-            <button type="button" onclick="location.href='User.php '">Update Employees</button>
-
+            <button type="button" onclick="location.href='User.php'">Update Employees</button>
+            <button type="button" onclick="location.href='deleteForm.php'">Delete Employees</button>
     </body>
 </html>
