--- a/Interface.html
+++ b/Interface.html
@@ -24,6 +24,7 @@
 
             <h1>Welcome User!</h1>
             <button type="button" onclick="location.href='index.html'">Log Out</button>
+            <button type="button" onclick="location.href='selfUpdate.html'">Update Information</button>
 
 
     </body>
